pkg/main/default/objects/EnvelopeConfigurationDocument__c/EnvelopeConfigurationDocument__c.object-meta.xml
<CustomObject>
	<label>Envelope Configuration Document</label>
	<nameField>
		<displayFormat>DEC-{0000000}</displayFormat>
		<label>Document</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Envelope Configuration Documents</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>