pkg/main/default/objects/EnvelopeConfigurationDocument__c/fields/EnvelopeConfiguration__c.field-meta.xml
<CustomField>
	<fullName>EnvelopeConfiguration__c</fullName>
	<label>DocuSign Envelope Configuration</label>
	<referenceTo>EnvelopeConfiguration__c</referenceTo>
	<relationshipLabel>Documents</relationshipLabel>
	<relationshipName>Documents</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>