pkg/main/default/objects/EnvelopeConfigurationDocument__c/fields/Filter__c.field-meta.xml
<CustomField>
	<fullName>Filter__c</fullName>
	<description>Source file filter</description>
	<label>Source file filter</label>
	<length>2000</length>
	<type>LongTextArea</type>
</CustomField>