pkg/main/default/objects/EnvelopeConfigurationDocument__c/fields/Name__c.field-meta.xml
<CustomField>
	<fullName>Name__c</fullName>
	<label>Extension</label>
	<length>255</length>
	<type>Text</type>
</CustomField>