pkg/main/default/objects/EnvelopeConfigurationDocument__c/fields/Type__c.field-meta.xml
<CustomField>
	<fullName>Type__c</fullName>
	<description>Document Type</description>
	<inlineHelpText>Document Type</inlineHelpText>
	<label>Document Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>TemplateDocument</fullName>
				<label>Template Document</label>
			</value>
			<value>
				<fullName>SourceFiles</fullName>
				<label>Source Files</label>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>